--- a/package.json
+++ b/package.json
@@ -15,27 +15,23 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "client": "cd client && npm start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "dev": "cd client && npm run dev"
-  },
-  "dependencies": {
-    "express": "^5.1.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "server": "cd server && npm run dev"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
     "@stylistic/eslint-plugin-js": "^4.2.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react-swc": "^3.9.0",
     "eslint": "^9.27.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.1.0",
+    "prettier": "^3.5.3",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.32.1",
-    "vite": "^6.3.5"
+    "typescript-eslint": "^8.32.1"
+  },
+  "dependencies": {
+    "prettier-plugin-tailwindcss": "^0.6.11"
   }
 }
