--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "client": "cd client && npm start",
+    "client": "cd client && npm run dev",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "server": "cd server && npm run dev"
   },
