--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,16 +1,22 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "strict": true,
+    "sourceMap": true,
     "outDir": "dist",
-    "rootDir": "src",
+    "strict": true,
+    "lib": ["ESNext"],
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "sourceMap": true
+    "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*"],
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
+  },
+  "include": ["**/*.ts", "**/*.tsx", "src", "types"],
   "exclude": ["node_modules", "dist"]
 }
